// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swicth test workflow test initial:is close show openText 1`] = `
<article
  className="wonder-switch"
>
  <button
    onClick={[Function]}
  >
    run
  </button>
</article>
`;

exports[`Swicth test workflow test initial:is open show openText 1`] = `
<article
  className="wonder-switch"
>
  <button
    onClick={[Function]}
  >
    stop
  </button>
</article>
`;
